--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     width: 95%;
-    margin:0;
+    max-width: 2000px;
+    margin:auto;
 
     background-image: url(bk2.jpg);
     background-repeat: no-repeat;
@@ -10,6 +11,31 @@ body {
 
 
     color:darkgrey;
+    front-family: 'lato';
+    font-size: 2em;
+    line-height: 1.5;
 
 }
+main {
+    background: #00000054;
+    padding: 5px 40px;
+    margin-top: 20px;
+    border-radius: 100px;
+}
 
+
+.logo, .titulo1, .titulo2 {
+    margin: 40px;
+    text-align: center;
+}
+
+.texto1, .texto2 {
+    margin: 10px;
+    text-align: center;
+}
+iframe{
+    margin: auto;
+    width: 750px;
+    height: 472px;
+    display: block;
+}
