--- a/style.css
+++ b/style.css
@@ -35,8 +35,10 @@ main {
 }
 iframe{
     margin: auto;
-    width: 750px;
-    height: 472px;
+    width: 680px;
+    height: 340px;
+    max-width: 100%;
+    max-height: 100%;
     display: block;
 }
 
@@ -73,7 +75,8 @@ iframe{
     box-shadow: 7px 7px 13px 0 darkgray;
     padding: 20px;
     margin: 20px;
-    width: 400px;
+    width: 250px;
+    max-width: 100%;
     transition: all 0.3s ease-out;
 }
 .card1:hover {
